@@ -1,6 +1,8 @@
 Version 1.3.13+svn:
  * language and i18n:
    * updated translations: 
+ * user interface
+   * the apple key works a shortcut modifier again (bug #10586)
 
 Version 1.3.13:
  * campaigns:
